added get_image_url for googledrive images missed out change and other minor changes

--- a/templates/Login.html
+++ b/templates/Login.html
@@ -53,23 +53,17 @@
 								<div class="row">
 									<div class="col-md-12">
 										<center>
-										</br><span>Don't have an account?</span></br>
-										<span>Sign up</span></center></br>
+										</br><span>Don't have an account?</span></br><br><br> 
+										<span>&nbsp;&nbsp;Sign up</span></center></br>
 									</center>	
 							
 									</div>
 								</div>
 								<div class="row" align="center">
+				    				<ul class="assignbt">
+										<li><a href="sign_up_coach">Coach</a>
+										</li>
 				
-									
-				
-									<li>
-									<button type="button" class = "sign_up_button">
-										<a href="sign_up_coach">Coach</a>
-									</button>
-									</li>
-				
-									
 								</div>	
 							</form>		      		      
 
