--- a/templates/athleteprofile.html
+++ b/templates/athleteprofile.html
@@ -10,15 +10,16 @@
 
 <div class="row" style="position:relative;top:10%;left:20%">
   <div class="column" style= "width:18%">
-    <img src="static/uploads/{{details.athlete.profileimg}}" alt="Profile Picture" class="rounded-circle" width="150" style="position:relative; top:10%; left:19%">
+    {% if {{get_image_url(details.athlete.profileimg)}} %}
+    <img src="{{get_image_url(details.athlete.profileimg)}}" alt="Profile Picture" class="rounded-circle" width="150" style="position:relative; top:10%; left:19%">
+    {% endif %}
   </div>
 
   <div class="column text_02"><br>
     <div style="margin-bottom: 10px">Name:  {{details.athlete.firstname}}&nbsp;{{details.athlete.surname}}  </div>
     <div style="margin-bottom: 10px">Age: {{details.athlete.age}}  </div>
     <div style="margin-bottom: 10px">Sport: {{details.athlete.sport}}</div>
-    <div style="margin-bottom: 10px">Rank: {{details.athlete.rank}}</div>
-  </div>
+     </div>
   
 </div>
  
@@ -32,35 +33,35 @@
    {% if details.athlete.filename1 != "" %}
   <div class="mySlides">
     <div class="numbertext">1 /{{details.athlete.counter}}</div>
-    <img src="static/uploads/{{details.athlete.filename1}}" style="width:850px;height:300px;">
+    <img src="{{get_image_url(details.athlete.filename1)}}" style="width:850px;height:300px;">
   </div>
    {% endif %}
 
    {% if details.athlete.filename2 != "" %}
     <div class="mySlides">
     <div class="numbertext">2 / {{details.athlete.counter}}</div>
-    <img src="static/uploads/{{details.athlete.filename2}}" style="width:850px;height:300px;"">
+    <img src="{{get_image_url(details.athlete.filename2)}}" style="width:850px;height:300px;"">
     </div>
    {% endif %}
 
   {% if details.athlete.filename3 != "" %}
    <div class="mySlides">
    <div class="numbertext">3 /{{details.athlete.counter}}</div>
-   <img src="static/uploads/{{details.athlete.filename3}}" style="width:850px;height:300px;">
+   <img src="{{get_image_url(details.athlete.filename3)}}" style="width:850px;height:300px;">
    </div>
   {% endif %}
 
   {% if details.athlete.filename4 != "" %}
    <div class="mySlides">
    <div class="numbertext">4 /{{details.athlete.counter}}</div>
-   <img src="static/uploads/{{details.athlete.filename4}}" style="width:850px;height:300px;">
+   <img src="{{get_image_url(details.athlete.filename4)}}" style="width:850px;height:300px;">
    </div
   {% endif %}
 
   {% if details.athlete.filename|length>2 %}
    <div class="mySlides">
    <div class="numbertext">5 /{{details.athlete.counter}}</div>
-   <img src="static/uploads/{{details.athlete.filename5}}" style="width:850px;height:300px;">
+   <img src="{{get_image_url(details.athlete.filename5)}}" style="width:850px;height:300px;">
   </div
   {% endif %}
 
@@ -77,27 +78,27 @@
   <div class="row" >
     {% if details.athlete.filename1 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{details.athlete.filename1}}" style="width:100%;height:100%;" onclick="currentSlide(1)">
+      <img class="demo cursor" src="{{get_image_url(details.athlete.filename1)}}" style="width:100%;height:100%;" onclick="currentSlide(1)">
     </div>
     {% endif %}
     {% if details.athlete.filename2 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{details.athlete.filename2}}" style="width:100%;height:100%;" onclick="currentSlide(2)">
+      <img class="demo cursor" src="{{get_image_url(details.athlete.filename2)}}" style="width:100%;height:100%;" onclick="currentSlide(2)">
     </div>
     {% endif %}
     {% if details.athlete.filename3 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{details.athlete.filename3}}" style="width:100%height:100%;" onclick="currentSlide(3)">
+      <img class="demo cursor" src="{{get_image_url(details.athlete.filename3)}}" style="width:100%height:100%;" onclick="currentSlide(3)">
     </div>
     {% endif %}
     {% if details.athlete.filename4 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{details.athlete.filename4}}" style="width:100%;height:100%;" onclick="currentSlide(4)">
+      <img class="demo cursor" src="{{get_image_url(details.athlete.filename4)}}" style="width:100%;height:100%;" onclick="currentSlide(4)">
     </div>
     {% endif %}
     {% if details.athlete.filename5 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{details.athlete.filename5}}" style="width:100%;height:100%;" onclick="currentSlide(5)">
+      <img class="demo cursor" src="{{get_image_url(details.athlete.filename5)}}" style="width:100%;height:100%;" onclick="currentSlide(5)">
     </div>
     {% endif %}
     
