--- a/templates/viewathletes.html
+++ b/templates/viewathletes.html
@@ -27,11 +27,11 @@
                  
                 </div>
                 {% for item in docs %}
-                
+                {% if item.firstname and item.surname %}
                 <div class="col-lg-3 col-sm-6">
                     <div class="product_box" ><a href="athleteprofile">
                         <p class="lorem_text">{{item.firstname}} {{item.surname}}</p>
-                        <a href= {{url_for('athleteprofile',id=item._id)}}><img src="static/uploads/{{item.profileimg}}" class="image_1"></a>
+                        <a href= {{url_for('athleteprofile',id=item._id)}}><img src="{{get_image_url(item.profileimg)}}" class="image_1"></a>
                         <div class="btn_main">
                             <div class="buy_bt">
                                 <ul>
@@ -42,6 +42,7 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
                 {% endfor %}
                 
             </div>
