--- a/templates/athletetemplate.html
+++ b/templates/athletetemplate.html
@@ -48,7 +48,7 @@
                         <body>
                             <div class="dropdown">
                                 <span style="color: black; font-size:15px">
-                                    <input type= "password" name= "password" id= "password" placeholder="Password"></input>
+                                    <input type= "password" name= "password" id= "password" placeholder="Password" required/>
                                 <br><br>
                                 </span>
                                 </div>       
