--- a/templates/sign_up_coach.html
+++ b/templates/sign_up_coach.html
@@ -30,7 +30,7 @@
 							  <label for="username" class="control-label">Firstname</label>
 							  <div class="templatemo-input-icon-container">
 								  <i class="fa fa-user"></i>
-								  <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter Firstname">
+								  <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter Firstname"  required/>
 							  </div>		            		            		            
 							</div>              
 						  </div>
@@ -39,7 +39,7 @@
 							  <label for="password" class="control-label">Surname</label>
 							  <div class="templatemo-input-icon-container">
 								  <i class="fa fa-user"></i>
-								  <input type="text" class="form-control" id="surname" name="surname" placeholder="Enter Surname">
+								  <input type="text" class="form-control" id="surname" name="surname" placeholder="Enter Surname" required/>
 							  </div>
 							</div>
 						  </div>
@@ -48,7 +48,7 @@
 				            <label for="E-Mail" class="control-label">E-Mail</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-envelope"></i>
-				            	<input type="email" class="form-control" id="email" name="email" placeholder="Enter Email">
+				            	<input type="email" class="form-control" id="email" name="email" placeholder="Enter Email" required/>
 				            </div>		            		            		            
 				          </div>              
 				        </div>
@@ -57,7 +57,7 @@
 							  <label for="E-Mail" class="control-label">Phone Number</label>
 							  <div class="templatemo-input-icon-container">
 								  <i class="fa fa-phone"></i>
-								  <input type="input" class="form-control" id="phoneno" name="phoneno" placeholder="Enter Phone Number">
+								  <input type="input" class="form-control" id="phoneno" name="phoneno" placeholder="Enter Phone Number" required/>
 							  </div>		            		            		            
 							</div>              
 						  </div>
@@ -67,7 +67,7 @@
 				            <label for="username" class="control-label">Username</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-user"></i>
-				            	<input type="text" class="form-control" id="username" name="username" placeholder="Enter Username">
+				            	<input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" required/>
 				            </div>		            		            		            
 				          </div>              
 				        </div>
@@ -76,7 +76,7 @@
 				            <label for="password" class="control-label">Password</label>
 				            <div class="templatemo-input-icon-container">
 				            	<i class="fa fa-lock"></i>
-				            	<input type="password" class="form-control" id="password" name="password" placeholder="Enter Password">
+				            	<input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required/>
 				            </div>
 				          </div>
 				        </div>
@@ -85,7 +85,7 @@
 								<i class="fa fa-photo"></i>
 								 <label for="profileimg" class="control-label">Profile Picture</label>
 							  <div class="templatemo-input-icon-container" style="display: inline-block; vertical-align: middle;">
-								 	<input type= "file" name="profileimg" id= "profileimg" onchange="fileValidation('profileimg')">							  </div>
+								 	<input type= "file" name="profileimg" id= "profileimg" onchange="fileValidation('profileimg')" required/>							  </div>
 							</div>
 						  </div>
 				        <div class="form-group">
